# webhook

./: Cargo.toml  LICENSE  README.md  config.yaml  config.yml
.github/workflows/: release.yml
src/: config.rs  main.rs
