[package]
name = "hookbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }


[dev-dependencies]
tokio-test = "*"
