[package]
name = "hookbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.7.2"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.22.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"

sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
rusqlite = "0.30.0"

chrono = { version = "0.4.31", features = ["serde"] }


[dev-dependencies]
color-backtrace = "0.6.1"
mockito = "1.2.0"
tokio-test = "0.4.3"
